# KytyPS5

./: .pre-commit-config.yaml  README.md
docs/: pipeline_caching_asincrono.md
src/: CMakeLists.txt
src/common/: common.h
src/common/platform/: sysWindowsFileIO.cpp  sysWindowsVirtual.cpp
src/graphics/guest_gpu/: gpu_format.cpp  graphicsRun.cpp  tile.cpp
src/graphics/guest_gpu/command_processor/: commandProcessor.h  pm4Handlers.cpp
src/graphics/host_gpu/: AsyncPipelineBuilder.h  graphicContext.h  pageManager.cpp  utils.cpp  utils.h  vma.cpp  vulkanInstance.h
src/graphics/host_gpu/objects/: textureCommon.cpp
src/graphics/host_gpu/renderer/: AsyncPipelineBuilder.h  bufferCache.cpp  bufferCache.h  colorRenderTarget.cpp  colorRenderTarget.h  context.cpp  debug.cpp  debug.h  depthRenderTarget.cpp  depthRenderTarget.h  descriptors.cpp  descriptors.h  dummyTextureCache.cpp  dummyTextureCache.h  framebufferCache.cpp  framebufferCache.h  image.cpp  image.h  imageInfo.h  imageView.cpp  imageView.h  internal.h  pipelineCache.cpp  pipelineCache.h  render.h  renderCompute.cpp  renderDraw.cpp  renderDraw.h  renderTarget.h  renderTargetBarriers.cpp  renderTargetBarriers.h  renderVertex.cpp  renderVertex.h  samplerCache.cpp  shaderResourceBarrier.cpp  shaderSubgroup.cpp  shaders.cpp  streamBuffer.cpp  streamBuffer.h  sync.cpp  (+5 more)
src/graphics/presentation/: videoOut.cpp  window.h
src/graphics/presentation/window/: swapchain.cpp  vulkanWindow.cpp
src/graphics/shader/: shader.cpp  shader.h  shaderBindings.h
src/graphics/shader/recompiler/: BufferFormat.h  ResourceMaterialization.cpp
src/graphics/shader/recompiler/spirvEmitter/: spirvEmitterModule.cpp
src/kernel/: memory.cpp  memory.h  memoryAddressSpace.inc  pthread.cpp
src/launcher/src/: configurationListWidget.cpp
src/libs/: agc.cpp  audio.cpp  dialog.cpp  dialog.h  libAudio2.cpp  libUlt.cpp
tests/: ResourceTrackingTests.cpp  ShaderRecompilerComputeTests.cpp  VirtualMemoryAllocationTests.cpp
